--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
-    <script>
-        const API_BASE_URL = "https://timeelsewhere.com/api"; // 动态后端 API 基础 URL
-    </script>
 </head>
 <body>
     <main>
@@ -62,41 +59,7 @@
         <p>&copy; 2025 Time Zone Switching. All rights reserved.</p>
     </footer>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const targetLocationInput = document.getElementById("target-location");
-            const datalistElement = document.getElementById("city-suggestions");
-
-            const updateDatalist = async (searchTerm) => {
-                if (!searchTerm.trim()) {
-                    datalistElement.innerHTML = ""; // 清空 datalist
-                    return;
-                }
-
-                try {
-                    const response = await fetch(`${API_BASE_URL}/autocomplete?term=${encodeURIComponent(searchTerm)}`);
-                    if (response.ok) {
-                        const cities = await response.json();
-                        datalistElement.innerHTML = ""; // 清空 datalist
-                        cities.forEach((city) => {
-                            const option = document.createElement("option");
-                            option.value = city;
-                            datalistElement.appendChild(option);
-                        });
-                    } else {
-                        console.error("Autocomplete API error:", response.statusText);
-                    }
-                } catch (error) {
-                    console.error("Error fetching autocomplete suggestions:", error);
-                }
-            };
-
-            targetLocationInput.addEventListener("input", (event) => {
-                const searchTerm = event.target.value.trim();
-                updateDatalist(searchTerm);
-            });
-        });
-    </script>
+    <!-- JavaScript files -->
     <script src="script.js"></script>
 </body>
 </html>
